# CentralPPTMaker

./: .gitignore  README.md  icon.icns  main.py  pyproject.toml
