[tool.poetry]
name = "centralpptmaker"
version = "2.0.1"
description = ""
authors = ["jmigsan <43961001+jmigsan@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
python-pptx = "^1.0.2"
pyinstaller = "^6.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"